# KaladriusTrainer

./: .gitignore  Ast.h  CMakeLists.txt  DictionariesModel.cpp  DictionariesModel.h  DictionariesWidget.cpp  DictionariesWidget.h  DictionariesWidget.ui  Dictionary.cpp  Dictionary.h  DictionaryParser.cpp  DictionaryParser.h  DictionaryWidget.cpp  DictionaryWidget.h  DictionaryWidget.ui  KaladriusTrainer.pro  Keycode.cpp  Keycode.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  ProgrammerStenoTutor.pro  ProgrammerStenoTutor.qrc  README.md  main.cpp  resource.h
Installer/: ProgrammerStenoTutor.nsi  build-installer.bat
Installer/NSIS/: Installer.nsi
Installer/config/: config.xml
Resources/: KaladriusTrainer.qrc  KaladriusTrainer.rc  ProgrammerStenoTutor.qrc  ProgrammerStenoTutor.rc
Resources/Keyboards/: ErgoDox.kbd  Kaladrius.kbd
Resources/Qml/: Accuracy.qml  CountdownTimer.qml  Dashboard.qml  WordCard.qml  WordCounter.qml  WordRater.qml  WordsToImprove.qml
Resources/Texts/: A Tale of Two Cities.txt  Alice's Adventures in Worderland.txt  Peter Pan.txt  Pride and Prejudice.txt  README.txt  The Adventures of Sherlock Holmes.txt  The Wonderful Wizard of Oz.txt  Treasure Island.txt
Resources/Theories/: Jackdaw.theory  ProgrammerSteno.theory
Resources/Words/: first200LongWords.txt  first200MediumWords.txt  first200ShortWords.txt  first400ShortMediumWords.txt  first600ShortMediumLongWords.txt
Sources/: Application.cpp  Application.h  ColorEditor.cpp  ColorEditor.h  DictionariesModel.cpp  DictionariesModel.h  DictionariesWidget.cpp  DictionariesWidget.h  Dictionary.cpp  Dictionary.h  DictionaryParser.cpp  DictionaryParser.h  DiffModel.cpp  DiffModel.h  FontEditor.cpp  FontEditor.h  InsertBranchCommand.cpp  ItemDataRole.h  KeyboardGraphicsScene.cpp  KeyboardGraphicsScene.h  KeyboardGraphicsView.cpp  KeyboardGraphicsView.h  KeyboardModel.cpp  KeyboardModel.h  KeyboardPropertiesModel.cpp  KeyboardPropertiesModel.h  KeyboardPropertiesTreeView.cpp  KeyboardPropertiesTreeView.h  KeyboardTreeView.cpp  KeyboardTreeView.h  KeycapColorEffect.cpp  KeycapColorEffect.h  KeycapDelegate.cpp  KeycapDelegate.h  KeycapGraphicsItem.cpp  KeycapGraphicsItem.h  KeycapPropertiesDelegate.cpp  KeycapPropertiesDelegate.h  KeycapPropertiesTreeView.cpp  KeycapPropertiesTreeView.h  (+38 more)
Sources/Charts/: ChartView.cpp  ChartView.h
Sources/Dashboard/: Dashboard.cpp  Dashboard.h
Sources/Database/: Database.cpp  Database.h
Sources/Dictionaries/: DictionariesModel.cpp  DictionariesModel.h  DictionariesWidget.cpp  DictionariesWidget.h  DictionariesWidget.ui  Dictionary.cpp  Dictionary.h  DictionaryParser.cpp  DictionaryParser.h  Keycode.cpp  Keycode.h
Sources/Keyboards/: KeyboardEditorMainWindow.cpp  KeyboardEditorMainWindow.h  KeyboardEditorMainWindow.ui  KeyboardGraphicsScene.cpp  KeyboardGraphicsScene.h  KeyboardGraphicsView.cpp  KeyboardGraphicsView.h  KeyboardModel.cpp  KeyboardModel.h  KeyboardTreeView.cpp  KeyboardTreeView.h  UndoableKeyboardModel.cpp  UndoableKeyboardModel.h
Sources/Keycaps/: KeycapColorEffect.cpp  KeycapColorEffect.h  KeycapDelegate.cpp  KeycapDelegate.h  KeycapGraphicsItem.cpp  KeycapGraphicsItem.h  KeycapState.h  KeycapTreeView.cpp  KeycapTreeView.h  KeycapWidget.cpp  KeycapWidget.h  KeycapWidget.ui
Sources/Lessons/: LessonEditorMainWindow.cpp  LessonEditorMainWindow.h  LessonEditorMainWindow.ui  LessonModel.cpp  LessonModel.h  LessonWidget.cpp  LessonWidget.h  LessonWidget.ui  LessonsEditorMainWindow.cpp  LessonsWidget.h  (+7 more)
(+252 files in other folders)
